# HyperPlot

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
dict/: HyperPlotDict.h  HyperPlotDict.xml
doc/: Doxyfile  DoxygenLayout.xml
example/: Makefile
html/: _binning_base_8cpp_source.html  _binning_base_8h_source.html  _cached_var_8h_source.html  _cyclic_phase_bins_8cpp_source.html  _cyclic_phase_bins_8h_source.html  _global_functions_8cpp_source.html  _global_functions_8h_source.html  _histogram_base_8cpp_source.html  _histogram_base_8h_source.html  _hyper_binning_8cpp_source.html  _hyper_binning_8h_source.html  _hyper_binning_algorithms_8cpp_source.html  _hyper_binning_algorithms_8h_source.html  _hyper_binning_disk_res_8cpp_source.html  _hyper_binning_disk_res_8h_source.html  _hyper_binning_maker_8cpp_source.html  _hyper_binning_maker_8h_source.html  _hyper_binning_maker_likelihood_8cpp_source.html  _hyper_binning_maker_likelihood_8h_source.html  _hyper_binning_maker_mint_8cpp_source.html  _hyper_binning_maker_mint_8h_source.html  _hyper_binning_maker_mint_randomise_8cpp_source.html  _hyper_binning_maker_mint_randomise_8h_source.html  _hyper_binning_maker_mint_smart_8cpp_source.html  _hyper_binning_maker_mint_smart_8h_source.html  _hyper_binning_maker_multi_smart_8cpp_source.html  _hyper_binning_maker_multi_smart_8h_source.html  _hyper_binning_maker_phase_binning_8cpp_source.html  _hyper_binning_maker_phase_binning_8h_source.html  _hyper_binning_maker_smart_8cpp_source.html  _hyper_binning_maker_smart_8h_source.html  _hyper_binning_maker_smart_likelihood_8cpp_source.html  _hyper_binning_maker_smart_likelihood_8h_source.html  _hyper_binning_makers_8cpp_source.html  (+195 more)
(+145 files in other folders)
